--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "Sidemenu",
-  "app_id": "",
+  "name": "Prinzengarde Bergisch Gladbach",
+  "app_id": "de.cutiundstier.PrinzengardeBergischGladbach",
   "v2": true,
   "typescript": true
 }
