--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "ionic-gulp-scripts-copy": "^2.0.0",
     "run-sequence": "1.1.5"
   },
-  "name": "sidemenu",
-  "description": "Sidemenu: An Ionic project",
+  "name": "Prinzengarde-GL",
+  "description": "",
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
