--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "cordovaPlatforms": [],
+  "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-console",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "cordova-plugin-statusbar",
+    "ionic-plugin-keyboard"
+  ],
   "dependencies": {
     "@angular/common": "2.0.0-rc.3",
     "@angular/compiler": "2.0.0-rc.3",
@@ -14,6 +23,7 @@
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
+  "description": "",
   "devDependencies": {
     "del": "2.2.0",
     "gulp": "3.9.1",
@@ -24,16 +34,5 @@
     "ionic-gulp-sass-build": "^1.0.0",
     "ionic-gulp-scripts-copy": "^2.0.0",
     "run-sequence": "1.1.5"
-  },
-  "name": "Prinzengarde-GL",
-  "description": "",
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": []
+  }
 }
