--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "PrinzengardeGL",
+  "version": "1.0.1",
+  "author": "cuti und stier gbr",
+  "description": "Informationsdienst für mobile Endgeräte der Prinzengarde Bergisch Gladbach",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/racingtomcat/prinzengarde-GL.git"
+  },
   "cordovaPlatforms": [],
   "cordovaPlugins": [
     "cordova-plugin-device",
@@ -12,18 +21,17 @@
     "@angular/common": "2.0.0-rc.3",
     "@angular/compiler": "2.0.0-rc.3",
     "@angular/core": "2.0.0-rc.3",
+    "@angular/http": "2.0.0-rc.3",
     "@angular/platform-browser": "2.0.0-rc.3",
     "@angular/platform-browser-dynamic": "2.0.0-rc.3",
-    "@angular/http": "2.0.0-rc.3",
-    "es6-shim": "^0.35.0",
+    "es6-shim": "^0.35.1",
     "ionic-angular": "2.0.0-beta.10",
-    "ionic-native": "1.3.2",
+    "ionic-native": "^1.3.21",
     "ionicons": "3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.17"
   },
-  "description": "",
   "devDependencies": {
     "del": "2.2.0",
     "gulp": "3.9.1",
