--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "ionicons": "3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.17"
+    "zone.js": "^0.6.17" 
   },
   "devDependencies": {
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-watch": "4.3.5",
+    "gulp-concat": "2.6.0",
     "ionic-gulp-browserify-typescript": "2.0.0",
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
